--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,19 @@
   border-radius: 5px;
   padding: 20px;
 }
+
+.error{
+border: red 1px solid;
+}
+
+.error-message{
+  color: red;
+}
+
+.active-filter{
+  background-color:yellowgreen;
+}
+
+.is-done{
+  opacity: 0.5;
+}
